# Badania_Operacyjne

./: .gitignore  CMakeLists.txt  GANTT.csv  README.md
include/: Graf.h  PERTGraph.h
source/: Graf.cpp  PERTGraph.cpp  generate_gantt.py  main.cpp
